# scallop

./: .gitignore  Cargo.toml  LICENSE  changelog.md  makefile  readme.md
core/: Cargo.toml  build.rs  readme.md
core/res/testing/csv/: edge.csv  edge_with_deliminator.csv  edge_with_deliminator_and_header.csv  edge_with_header.csv  edge_with_prob.csv  enrollment.csv  student.csv
core/src/: lib.rs
core/src/common/: adt_variant_registry.rs  aggregate_op.rs  binary_op.rs  constants.rs  duration.rs  element.rs  entity.rs  expr.rs  foreign_aggregate.rs  foreign_function.rs  foreign_predicate.rs  functions.rs  generic_tuple.rs  input_file.rs  input_tag.rs  mod.rs  output_option.rs  predicate_set.rs  symbol_registry.rs  tuple.rs  tuple_access.rs  tuple_type.rs  tuples.rs  type_family.rs  unary_op.rs  value.rs  value_type.rs
core/src/common/foreign_aggregates/: avg.rs  categorical.rs  count.rs  disjunct.rs  enumerate.rs  exists.rs  min_max.rs  mod.rs  normalize.rs  rank.rs  sampler.rs  sort.rs  string_join.rs  sum_prod.rs  top_k.rs  uniform.rs  weighted_sum_avg.rs
core/src/common/foreign_functions/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  ceil.rs  cos.rs  datetime_day.rs  datetime_month.rs  datetime_month0.rs  datetime_year.rs  dim.rs  dot.rs  exp.rs  exp2.rs  floor.rs  format.rs  hash.rs  log.rs  log2.rs  max.rs  min.rs  mod.rs  parse_entity.rs  pow.rs  powf.rs  sign.rs  sin.rs  string_char_at.rs  string_concat.rs  string_index_of.rs  string_length.rs  string_lower.rs  string_replace.rs  string_trim.rs  string_upper.rs  substring.rs  tan.rs
core/src/common/foreign_predicates/: datetime_ymd.rs  float_eq.rs  mod.rs  new_tag_variable.rs  range.rs  soft_cmp.rs  soft_eq.rs  soft_gt.rs  soft_lt.rs  soft_neq.rs  string_chars.rs  string_find.rs  string_index.rs  string_split.rs  tensor_shape.rs
core/src/common/foreign_tensor/: convert.rs  expr.rs  external_tensor.rs  internal_tensor.rs  mod.rs  registry.rs  shape.rs
core/src/common/tensors/: convert.rs  mod.rs  msg.rs  registry.rs  shape.rs  symbol.rs  tensor.rs  torch.rs  value.rs
core/src/compiler/: compile.rs  error.rs  mod.rs  options.rs  readme.md
core/src/compiler/back/: ast.rs  attr.rs  b2r.rs  compile.rs  error.rs  mod.rs  permutation.rs  pretty.rs  query_plan.rs  scc.rs  var_tuple.rs
core/src/compiler/front/: .gitignore  analysis.rs  annotation.rs  compile.rs  error.rs  grammar.lalrpop  mod.rs  parser.rs  pretty.rs  transform.rs  utils.rs  visitor.rs  visitor_mut.rs
core/src/compiler/ram/: ast.rs  dependency.rs  incremental.rs  mod.rs  pretty.rs  ram2rs.rs  transform.rs
core/src/integrate/: attribute.rs  context.rs  error.rs  integrate.rs  interpret.rs  mod.rs  options.rs
core/src/runtime/: mod.rs  runtime.rs
core/src/runtime/database/: error.rs  metadata.rs  mod.rs
core/src/runtime/dynamic/: aggregate.rs  collection.rs  element.rs  error.rs  incremental.rs  interpret.rs  io.rs  iteration.rs  mod.rs  output_collection.rs  relation.rs  update.rs
core/src/runtime/edb/: edb.rs  edb_fact.rs  edb_relation.rs  error.rs  mod.rs
core/src/runtime/env/: dynamic_entity_storage.rs  environment.rs  mod.rs  new_entities.rs  options.rs  random.rs  scheduling.rs  stopping_criteria.rs  symbol_registry.rs  tensor_registry.rs
core/src/runtime/error/: error.rs  io.rs  mod.rs
core/src/runtime/monitor/: debug_runtime.rs  debug_tags.rs  dump_proofs.rs  dynamic_monitors.rs  iteration_checker.rs  logging.rs  mod.rs  monitor.rs  readme.md  registry.rs
core/src/runtime/utils/: mod.rs  (+1 more)
core/src/testing/: mod.rs  test_collection.rs  test_compile.rs  test_interpret.rs
core/src/utils/: cartesian.rs  chrono.rs  copy_on_write.rs  float.rs  id_allocator.rs  indexed_retain.rs  integer.rs  mod.rs  pointer_family.rs
core/tests/: tests.rs
core/tests/compiler/: adt.rs  errors.rs  func.rs  mod.rs  parse.rs
core/tests/integrate/: adt.rs  aggregate.rs  attr.rs  basic.rs  bug.rs  dt.rs  edb.rs  ff.rs  fp.rs  goal.rs  incr.rs  io.rs  iter.rs  mod.rs  prim.rs  prob.rs  sampling.rs  scheduling.rs  tag.rs  time.rs
core/tests/runtime/: mod.rs
core/tests/utils/: value.rs
etc/scallop-cli/: setup.cfg  setup.py
etc/scallop-cli/scallop/: cli.py  create_plugin.py  run_scallop.py
etc/scallopy/: Cargo.toml  makefile  pyproject.toml  readme.md
etc/scallopy-ext/: makefile  setup.cfg
etc/scallopy-ext/tests/: basics.py  test.py
etc/scallopy-plugins/clip/: pyproject.toml
etc/scallopy-plugins/gpt/: pyproject.toml  readme.md
etc/scallopy-plugins/opencv/: MANIFEST.in  pyproject.toml
etc/scallopy-plugins/plip/: pyproject.toml
etc/scallopy-plugins/sam/: pyproject.toml
etc/scallopy/examples/: batch_parallel.py  custom_provenance.py  custom_provenance_2.py  digit_jit.py  disjunction.py  disjunction_2.py  disjunction_2_torch.py  edge_path.py  edge_path_err.py  edge_path_prob.py  edge_path_prob_sugar.py  foreign_function.py  foreign_predicate.py  incr_edge_path.py  load_csv.py  load_csv_prob.py  multi_output.py  probabilistic_born_in.py  remove_unused_jit.py  save_load.py  sparse_gradient.py  sum_2_forward.py  sum_2_indiv.py  top_bottom_k_provenance.py
etc/scallopy/scallopy/: __init__.py  attribute.py  collection.py  context.py  forward.py  function.py  history.py  input_mapping.py  input_output.py  io.py  output_mapping.py  predicate.py  provenance.py  sample_type.py  scallopy.pyi  stdlib.py  sugar.py  syntax.py  tag_types.py  torch_importer.py  types.py  utils.py  value_types.py
etc/scallopy/src/: collection.rs  config.rs  context.rs  custom_tag.rs  error.rs  external_tag.rs  foreign_attribute.rs  foreign_function.rs  foreign_predicate.rs  io.rs  lib.rs  provenance.rs  runtime.rs  tag.rs  torch.rs  tuple.rs  wmc.rs
etc/scallopy/tests/: basics.py  configurations.py  convert.py  dbio.py  debug.py  entity.py  failure.py  foreign_attribute.py  foreign_function.py  foreign_predicate.py  forward.py  input_mapping.py  plugins.py  sparse_forward.py  tensors.py  test.py
lib/parse_relative_duration/: Cargo.toml  LICENSE  readme.md
lib/parse_relative_duration/src/: lib.rs  parse.rs
lib/parse_relative_duration/tests/: basics.rs
(+868 files in other folders)
