[workspace]
members = [
  "core",

  # Extra packages
  "etc/codegen",
  "etc/sclc",
  "etc/scli",
  "etc/sclrepl",
  "etc/scallopy",
  # "etc/scallop-node",
  "etc/scallop-wasm",

  # Additional dependencies
  "lib/astnode-derive",
  "lib/parse_relative_duration",
  "lib/sdd",

  # Laboratory
  # "lab/rsat",
  # "lab/dyn-tensor-registry",
  # "lab/ram-egg",
  # "lab/ast-derive",
  # "lab/type-inference",
  # "lab/visitor",
]

default-members = [
  "core",
  "etc/codegen",
  "etc/sclc",
  "etc/scli",
  "etc/sclrepl",
]
