[package]
name = "scallop-core"
version = "0.2.0"
authors = ["Ziyang Li <liby99@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[build-dependencies]
lalrpop = { version = "0.19.9", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.9"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = "1.0"
paste = "1.0"
itertools = "0.10"
colored = "2.0"
petgraph = "0.6"
csv = "1.1"
sprs = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.1.6"
parse_duration = "2.1.1"
dyn-clone = "1.0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng", "small_rng", "alloc"] }
sdd = { path = "../lib/sdd" }

# Optional ones
tch = { version = "0.13.0", optional = true }

[features]
torch-tensor = ["dep:tch"]
