[metadata]
name = scallop
version = 0.2.4
author = Ziyang Li
author_email = liby99@seas.upenn.edu
description = Scallop CLI
long_description = file: readme.md
long_description_content_type = text/markdown

[options]
packages =
    scallop
python_requires = >=3.7
install_requires =
    prompt_toolkit
    tabulate

[options.entry_points]
console_scripts =
    scallop = scallop.cli:main
