[metadata]
name = scallopy_ext
version = 0.2.1
author = Ziyang Li
author_email = liby99@seas.upenn.edu
description = Scallopy Extension
long_description = file: readme.md, LICENSE
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
