[package]
name = "scallopy"
version = "0.2.0"
edition = "2018"

[lib]
name = "scallopy"
crate-type = ["cdylib"]

[dependencies]
scallop-core = { path = "../../core" }
sclc-core = { path = "../sclc" }
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
pythonize = "0.18"

[dependencies.pyo3]
version = "0.18.2"
features = ["extension-module"]

[features]
default = ["torch-tensor"]
torch-tensor = []
