[package]
name = "scallopy"
version = "0.2.5"
edition = "2018"

[lib]
name = "scallopy"
crate-type = ["cdylib"]

[dependencies]
scallop-core = { path = "../../core" }
sclc-core = { path = "../sclc" }
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
pythonize = "0.29"

[dependencies.pyo3]
version = "0.29.0"
features = ["extension-module", "py-clone"]

[features]
default = ["torch-tensor"]
torch-tensor = []
