[project]
name = "scallop-opencv"
version = "0.0.1"
dependencies = [
  "opencv-python",
  "imgurpython",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."scallop.plugin.setup_arg_parser"]
opencv = "scallop_opencv:setup_arg_parser"

[project.entry-points."scallop.plugin.configure"]
opencv = "scallop_opencv:configure"

[project.entry-points."scallop.plugin.load_into_context"]
opencv = "scallop_opencv:load_into_context"
